--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -98,10 +98,6 @@ h4 {
         width: 80%;
     }
 
-    .hector img {
-        width: 50em;
-    }
-
     h1 {
         margin-top: 1.5em;
     }
@@ -143,7 +139,7 @@ h4 {
 
     .section-container {
         margin: 0.5 auto;
-        font-size: 120%;
+        font-size: 100%;
     }
 
     .section-container p {
